--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.14.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "openai": "^4.96.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
